Stats -> Logbook: Added County column
Stats -> Logbook: Added State and County searching, sorting
Stats -> WPX: Added US counties, now [WPX / USC] tab
Stats -> Live: Fixed issue with DXCC count and live refresh
App: Updated initial install Big CTY data to version April 12th, 2025
Settings -> Grids: New 'All Grid Overlay' Opacity setting


App: Updated Electron engine to v35.2.2 (except for Windows 7)
App: Linux pacman auto-updater support
Logging:
    Cloudlog/Wavelog: Comprehensive fixes supplied by DJ7NT and DF2ET, many thanks!
    QRZ.com: Added extra error info to main.log on upload failure
    
App: Fixed 7 year old bug in ADIF parsing, big thanks to VE3MSC for this find!
     If "PSKReporter" appears anywhere in the ADIF being loaded it would be rejected entirely


Call Roster -> Watcher: Fixed display of compound callsign matches in Msg column
App: Settings -> General: Multiple IPs supported in 'Forwared UDP Messages' (comma separated)

App: Fixed crash on startup on Windows system when no text-2-speech available (Thanks PU8REG)
Map: Right-Click empty grid info now shows all DXCC grids associated
Logging: ACLog: Fixed issue with incorrect band info from 70cm and above
Mac: Cmd-Q now exits the application



App: Updated Electron engine to 35.7.0
      (Windows users should double-check firewall settings after installation)

App: Multiple GridTracker instance support using --gt-name=UniqueName

Logging: WSJT-X source renamed to "App Log(s)" .. all WSJT-X/JTDX log file locations searched at startup
      (Then disable the ones you don't want to load, this is for multiple GT instance support)

Logging: LoTW: Will now queue failed uploads and retry on next QSO

Logging: Any 1x1 QSO in the US over 15 days not considered worked for hunting purposes

Call Roster: Due to complaints 1x1 US Special Callsign highlighting removed
      (Use the watcher -> Callsign Regex  ^[KNW][0-9][A-W|Y|Z]$ to replicate)




### Fixed


### Removed


[unreleased]: 