@@ -1,6 +1,6 @@
 {
   "name": "GridTracker2",
-  "version": "2.250713.1",
+  "version": "2.250713.2",
   "description": "GridTracker2",
   "main": "./src/main/index.js",
   "author": "The GridTracker Team",
